# wgpu_cube

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html
.cargo/: config.toml
.github/workflows/: rust.yml
pkg/: wgpu_shape_renderer.d.ts  wgpu_shape_renderer.js  wgpu_shape_renderer_bg.wasm  wgpu_shape_renderer_bg.wasm.d.ts
src/: camera.rs  camera_controller.rs  lib.rs  main.rs  shader.wgsl  state.rs  texture.rs  wasm_camera_controller.rs
src/extras/math/: vector3.rs
src/geometry/: box.rs
src/math/: cartesian_to_spherical.rs  spherical_to_cartesian.rs
src/platform_impl/web/: webgl_renderer.rs
src/render/: camera.rs  camera_controller.rs  light.rs  shader.wgsl  state.rs  texture.rs  vertex.rs
src/render/camera/: orbit_camera.rs
src/render/camera/orbit_camera/: orbit_camera.rs  orbit_camera_bounds.rs
src/render/geometry/: box.rs
