[package]
name = "efficient_cube"
version = "0.1.0"
authors = ["FrankenApps"]
edition = "2021"

[features]
indexed = [] # This is feature gated because it does not work on WebGL2 on Safari.

[dependencies]
anyhow = "1.0"
bytemuck = { version = "1.4", features = [ "derive" ] }
glam = { version = "0.19.0", features = ["bytemuck"] }
image = "0.23"
pollster = "0.2"
raw-window-handle = "0.3.3"
wgpu = { version = "0.11", features = ["webgl"] }
winit = { version = "0.25", features = ["web-sys"] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.9"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.76"
web-sys = { version = "0.3.53", features = [
    "DomRect",
    "Element",
]}

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"

[[bin]]
name = "efficient_cube"
path = "src/main.rs"

[lib]
name = "wgpu_shape_renderer"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
