[package]
name = "efficient_cube"
version = "0.1.0"
authors = ["FrankenApps"]
edition = "2021"

[features]
default = []
indexed = [] # This is feature gated because it does not work on WebGL2 on Safari.
msaa = [] # This is feature gated because it does cause a crash when running on DX12 WARP fallback.
force_fallback = [] # Use software fallback (can be enabled for testing).

[profile.release]
lto = true # Use link-time optimization.
codegen-units = 1 # Enable additional optimizations by building with one codegen-unit only.
strip = true # Strip symbols.
#opt-level = "z" # This can be enabled to sacrifice some performance for binary size.
panic = "abort" # No backtrace is needed.

[dependencies]
bytemuck = { version = "1.4", features = [ "derive" ] }
glam = { version = "0.23", features = ["bytemuck"] }
image = "0.24"
pollster = "0.2"
raw-window-handle = "0.5.2"
wgpu = { version = "0.14", features = ["webgl"] }
winit = "0.28"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.9"
log = "0.4"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
wasm-bindgen = "0.2.76"
web-sys = { version = "0.3.53", features = [
    "DomRect",
    "Element",
]}

[build-dependencies]
fs_extra = "1.2"
glob = "0.3"

[[bin]]
name = "efficient_cube"
path = "src/main.rs"

[lib]
name = "wgpu_shape_renderer"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
